--- a/.project
+++ b/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>[source path] starling_src</name>
 			<type>2</type>
-			<location>F:/Tool/as3Lib/starling_src</location>
+			<location>E:/Tool/as3Lib/starling_src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
